--- a/style.css
+++ b/style.css
@@ -21,50 +21,49 @@ body {
 }
 
 .heading {
-    margin: 5px;
-    font-size: 30px;
+  margin: 5px;
+  font-size: 30px;
 }
 
 .ratings-container {
-    display: flex;
-    padding: 20px 0;
+  display: flex;
+  padding: 20px 0;
 }
 
 .rating {
-    cursor: pointer;
-    padding: 10px;
-    margin: 10px 5px;
+  cursor: pointer;
+  padding: 10px;
+  margin: 10px 5px;
 }
 
 .rating:hover,
-.rating.active 
-{
-    background: darkseagreen;
-    border-radius: 10px;
-    box-shadow: 0 0 10 rgba(0, 0, 0, 0.3);
-    color: aliceblue;
-    transition: all 300ms ease;
+.rating.active {
+  background: darkseagreen;
+  border-radius: 10px;
+  box-shadow: 0 0 10 rgba(0, 0, 0, 0.3);
+  color: aliceblue;
+  transition: all 300ms ease;
 }
 
 .btn {
-    background-color: darkcyan;
-    color: aliceblue;
-    border: 0;
-    margin: 10px;
-    border-radius: 4px;
-    padding: 12px 30px;
-    cursor: pointer;
+  background-color: darkcyan;
+  color: aliceblue;
+  border: 0;
+  margin: 10px;
+  border-radius: 4px;
+  padding: 12px 30px;
+  cursor: pointer;
 }
 
 .btn:hover {
-    box-shadow: 0 7px 8px rgba(0, 0, 0, 0.3);
-    transition: all 200ms ease;
+  box-shadow: 0 7px 8px rgba(0, 0, 0, 0.3);
+  transition: all 200ms ease;
 }
 
 .btn:active {
-    transform: scale(0.96);
+  transform: scale(0.96);
 }
 
 .rating img {
-    width: 20px;
+  width: 20px;
 }
